# boost_log_wrapper

./: CMakeLists.txt  README.md  log.cpp  log.h  test.cpp
