PROJECT(log_test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-Wall -DBOOST_LOG_DYN_LINK)

SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

LINK_LIBRARIES(boost_thread boost_system boost_log boost_log_setup boost_filesystem pthread)

ADD_EXECUTABLE(log_test ${SRC_LIST})
