PROJECT(log_test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif(NOT CMAKE_BUILD_TYPE)

message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

LINK_LIBRARIES(boost_thread boost_system boost_log boost_log_setup boost_filesystem pthread)

ADD_EXECUTABLE(log_test ${SRC_LIST})
